--- a/rottle/package.json
+++ b/rottle/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@netlify/remix-runtime": "^2.3.1",
     "@remix-run/node": "^2.16.6",
     "@remix-run/react": "^2.16.6",
     "@remix-run/serve": "^2.16.6",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@netlify/remix-adapter": "^2.6.1",
     "@remix-run/dev": "^2.16.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
