--- a/rottle/package.json
+++ b/rottle/package.json
@@ -15,9 +15,11 @@
     "@remix-run/node": "^2.16.6",
     "@remix-run/react": "^2.16.6",
     "@remix-run/serve": "^2.16.6",
+    "@rollup/rollup-win32-x64-gnu": "^4.13.1-1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup": "^4.40.2"
   },
   "devDependencies": {
     "@netlify/remix-adapter": "^2.6.1",
